2011-05-16  Chris Marrin  <cmarrin@apple.com>

Reviewed by Darin Adler.

        Plug-in hit testing is broken after zooming
        https://bugs.webkit.org/show_bug.cgi?id=60916

        Construct a WebMouseEvent to send to plugin, adjusting values to take pageScaleFactor
        into account. Also adjusted bounds sent to viewGeometryDidChange to take pageScaleFactor
        into account. Both are needed or the plugin will think the mouse positions are outside
        its bounds.

        * Shared/WebEvent.h:
        * Shared/WebMouseEvent.cpp:Add ctor to clone a WebMouseEvent and add a scaleFactor to values
        (WebKit::WebMouseEvent::WebMouseEvent):
        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::handleEvent):Adjust mouse coords to take pageScaleFactor into account
        (WebKit::PluginView::viewGeometryDidChange):Adjust bounds to take pageScaleFactor into account


Canonical link: https://commits.webkit.org/76265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86615 268f45cc-cd09-0410-ab3c-d52691b4dbfc